--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Navigation-->
     <<nav>
-        <img src="/Static/images/logo.svg"></img>
+        <img src="/images/logo.svg"></img>
         <div class = "navigation">
             <ul>
                 <li><a href="#">Home</a></li>
